# openturns

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  TODO
lib/: CMakeLists.txt  Doxyfile.in  OpenTURNSConfig.cmake.in  UseOpenTURNS.cmake
lib/etc/: CMakeLists.txt  openturns.conf.in
lib/include/: CMakeLists.txt  OTconfig.h.in  OTconfig.hxx  OTconfigure_args.hxx.in  OTdebug.h  OTmemory.hxx  OTprivate.hxx  OTtestcode.hxx  OTthread.hxx  OTtypes.hxx  OTwindows.h  installed-OTconfig.h.in
lib/include/pthread_win32/: pthread.h
lib/src/: CMakeLists.txt  OT.hxx  bind.c  main.cxx  openturns-config-build.in  openturns-module-build.in  openturns_library_ok.c
lib/src/Base/: CMakeLists.txt  OTBase.hxx
lib/src/Base/Algo/: ApproximationAlgorithm.cxx  ApproximationAlgorithm.hxx  ApproximationAlgorithmImplementation.cxx  ApproximationAlgorithmImplementation.hxx  ApproximationAlgorithmImplementationFactory.cxx  ApproximationAlgorithmImplementationFactory.hxx  CMakeLists.txt  Classifier.cxx  Classifier.hxx  ClassifierImplementation.cxx  ClassifierImplementation.hxx  CorrectedLeaveOneOut.cxx  CorrectedLeaveOneOut.hxx  FFT.cxx  FFT.hxx  FFTImplementation.cxx  FFTImplementation.hxx  FittingAlgorithm.cxx  FittingAlgorithm.hxx  FittingAlgorithmImplementation.cxx  FittingAlgorithmImplementation.hxx  GaussKronrod.cxx  GaussKronrod.hxx  GaussKronrodRule.cxx  GaussKronrodRule.hxx  IntegrationAlgorithm.cxx  IntegrationAlgorithm.hxx  IntegrationAlgorithmImplementation.cxx  IntegrationAlgorithmImplementation.hxx  KDTree.cxx  KDTree.hxx  KFold.cxx  KFold.hxx  KissFFT.cxx  KissFFT.hxx  LeastSquaresMetaModelSelection.cxx  LeastSquaresMetaModelSelection.hxx  LeastSquaresMetaModelSelectionFactory.cxx  LeastSquaresMetaModelSelectionFactory.hxx  OTAlgo.hxx  (+4 more)
lib/src/Base/Common/: AtomicFunctions.cxx  AtomicFunctions.hxx  BinaryStorageManager.cxx  BinaryStorageManager.hxx  CMakeLists.txt  Catalog.cxx  Catalog.hxx  ComparisonOperator.cxx  ComparisonOperator.hxx  ComparisonOperatorImplementation.cxx  ComparisonOperatorImplementation.hxx  Equal.cxx  Equal.hxx  Exception.cxx  Exception.hxx  Greater.cxx  Greater.hxx  GreaterOrEqual.cxx  GreaterOrEqual.hxx  IdFactory.cxx  IdFactory.hxx  InterfaceObject.cxx  InterfaceObject.hxx  Less.cxx  Less.hxx  LessOrEqual.cxx  LessOrEqual.hxx  Lockable.cxx  Lockable.hxx  Log.cxx  Log.hxx  MPI.cxx  MPI.hxx  Memory.cxx  Memory.hxx  MutexLock.hxx  OSS.cxx  OSS.hxx  OStream.cxx  OStream.hxx  (+43 more)
lib/src/Base/Diff/: BlendedStep.cxx  BlendedStep.hxx  CMakeLists.txt  CenteredFiniteDifferenceGradient.cxx  CenteredFiniteDifferenceGradient.hxx  CenteredFiniteDifferenceHessian.cxx  CenteredFiniteDifferenceHessian.hxx  ConstantStep.cxx  ConstantStep.hxx  FiniteDifferenceGradient.cxx  FiniteDifferenceGradient.hxx  FiniteDifferenceHessian.cxx  FiniteDifferenceHessian.hxx  FiniteDifferenceStep.cxx  FiniteDifferenceStep.hxx  FiniteDifferenceStepImplementation.cxx  FiniteDifferenceStepImplementation.hxx  NonCenteredFiniteDifferenceGradient.cxx  NonCenteredFiniteDifferenceGradient.hxx  OTDiff.hxx
lib/src/Base/Experiments/: Axial.cxx  Axial.hxx  Box.cxx  Box.hxx  CMakeLists.txt  Combinations.cxx  Combinations.hxx  CombinatorialGenerator.cxx  CombinatorialGenerator.hxx  CombinatorialGeneratorImplementation.cxx  CombinatorialGeneratorImplementation.hxx  Composite.cxx  Composite.hxx  Experiment.cxx  Experiment.hxx  ExperimentImplementation.cxx  ExperimentImplementation.hxx  Factorial.cxx  Factorial.hxx  KPermutations.cxx  KPermutations.hxx  OTExperiments.hxx  StratifiedExperiment.cxx  StratifiedExperiment.hxx  Tuples.cxx  Tuples.hxx
lib/src/Base/Func/: AggregatedNumericalMathEvaluationImplementation.cxx  AggregatedNumericalMathEvaluationImplementation.hxx  AggregatedNumericalMathGradientImplementation.cxx  AggregatedNumericalMathGradientImplementation.hxx  AggregatedNumericalMathHessianImplementation.cxx  AggregatedNumericalMathHessianImplementation.hxx  AnalyticalNumericalMathEvaluationImplementation.cxx  AnalyticalNumericalMathEvaluationImplementation.hxx  AnalyticalNumericalMathGradientImplementation.cxx  AnalyticalNumericalMathGradientImplementation.hxx  Basis.cxx  (+169 more)
lib/src/Uncertainty/: CMakeLists.txt  OTUncertainty.hxx
lib/test/: CMakeLists.txt  TestIdentity.cxx  TestResponseSurface.cxx  external_code_threads.cxx  fonction_2.cxx  generic.cxx  minimal_wrapper.cxx  poutre.cxx  poutre.sh  poutre_files.sh  poutre_fullspeed.cxx  poutre_sample.cxx  poutre_sample_no_retry.cxx  poutre_threads.cxx  t_ARMACoefficients_std.cxx  t_ARMALikelihoodFactory_std.cxx  t_ARMAState_std.cxx  t_ARMA_std.cxx  t_ARMA_std.expout  t_AbdoRackwitz_linear.cxx  t_AbdoRackwitz_nonlinear.cxx  t_AbdoRackwitz_std.cxx  t_AggregatedNumericalMathEvaluationImplementation_std.cxx  t_AliMikhailHaqCopulaFactory_std.cxx  t_AliMikhailHaqCopula_std.cxx  t_AnalyticalNumericalMathEvaluationImplementation_std.cxx  t_AnalyticalNumericalMathGradientImplementation_std.cxx  t_AnalyticalNumericalMathHessianImplementation_std.cxx  t_AnalyticalResult_std.cxx  t_AnalyticalResult_std.expout  t_Analytical_std.cxx  t_ArcsineFactory_std.cxx  t_Arcsine_std.cxx  t_Arcsine_std.expout  t_AtomicFunctions_std.cxx  t_Axial_std.cxx  t_BarPlot_std.cxx  t_BasisFactory_std.cxx  t_BasisFactory_std.expout  t_BasisSequence_std.cxx  (+492 more)
python/src/: AbsoluteExponential.i  Arcsine.i  Arcsine_doc.i.in  BaseFuncCollection.i  BaseGeomTemplateDefs.i  BaseGraphTemplateDefs.i  BaseTypTemplateDefs.i  BaseWrapperTemplateDefs.i  Basis.i  BasisFactory.i  Bernoulli.i  Bernoulli_doc.i.in  Beta.i  Beta_doc.i.in  Binomial.i  Binomial_doc.i.in  Burr.i  Burr_doc.i.in  CMakeLists.txt  CharlierFactory.i  CharlierFactory_doc.i.in  Chi.i  ChiSquare.i  ChiSquare_doc.i.in  Chi_doc.i.in  Collection.i  ComplexMatrix.i  ComposedCopula.i  CompositeDistribution.i  ConfidenceInterval.i  ConstantBasisFactory.i  Copula.i  CorrelationAnalysis.i  CorrelationMatrix.i  CovarianceMatrix.i  CovarianceMatrix_doc.i.in  Description.i  Dirac.i  Dirac_doc.i.in  Dirichlet.i  (+198 more)
wrappers/WrapperTemplates/wrapper_calling_shell_command/: CMakeLists.txt  code_C1.c  customize  wcode.xml  wrapper.c
(+1437 files in other folders)
